# precedent

./: README.md  pyproject.toml
precedent/: __init__.py
